@@ -17,6 +17,7 @@ usr/bin/dpkg-scansources
 usr/bin/dpkg-shlibdeps
 usr/bin/dpkg-source
 usr/bin/dpkg-vendor
+usr/share/dpkg/*.mk
 usr/share/man/{*/*,*}/deb-control.5
 usr/share/man/{*/*,*}/deb-src-control.5
 usr/share/man/{*/*,*}/deb-version.5
