@@ -79,6 +79,9 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     Closes: #633627
   * Improve dpkg-source's error message complaining about the lack
     of the upstream tarball. Closes: #634510
+  * Add some common makefile snippets for use in rules files in
+    /usr/share/dpkg/: default.mk, architecture.mk, buildflags.mk, vendor.mk
+    Closes: #606839
 
   [ Guillem Jover ]
   * Install deb-src-control(5) man pages in dpkg-dev. Closes: #620520
